--- a/RESUME.ipynb
+++ b/RESUME.ipynb
@@ -95,7 +95,7 @@
     "## Type of Inheritance\n",
     "Inheritance memiliki 4 tipe yaitu: Default, Overriding, Super dan Multiple inheritance\n",
     "\n",
-    "![](./img/type_inheritance.png)\n",
+    "![](img/type_inheritance.png)\n",
     "\n",
     "### 1. Default\n",
     "**Default** tipe inheritance yang property,property dan method di dalam kelas induk sama persis dengan subclass (kelas anak) yang menggunakan (pass)"
