Update Catatan_Kuliah_Akhmad Helmi Irfasah_18044110057 .ipynb

--- a/Catatan_Kuliah_Akhmad Helmi Irfasah_18044110057 .ipynb
+++ b/Catatan_Kuliah_Akhmad Helmi Irfasah_18044110057 .ipynb
@@ -95,7 +95,7 @@
    "source": [
     "## Type of Inheritance\n",
     "Inheritance memiliki 4 tipe yaitu: Default, Overriding, Super dan Multiple inheritance\n",
-    "![](./img/oop.png)\n",
+    "![](./img/type.png)\n",
     "\n",
     "![](./img/type_inheritance.png)\n",
     "\n",
